[metadata]
name = lark-ambig-tools
version = 1.0.0
description = Utilities for lark's ambiguous trees
long_description = file: README.md
long_description_content_type=text/markdown
author = Chanic Panic
author_email = dev@chanicpanic.com
url = https://github.com/chanicpanic/lark-ambig-tools
license = MIT
license_files = LICENSE
platform = any
requires_dist = setuptools
keywords = lark ambiguity earley tree
classifier =
  Development Status :: 4 - Beta
  Environment :: Console
  Intended Audience :: Developers
  License :: OSI Approved :: MIT License
  Natural Language :: English
  Operating System :: OS Independent
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3 :: Only
  Programming Language :: Python :: 3.6
  Programming Language :: Python :: 3.7
  Programming Language :: Python :: 3.8
  Programming Language :: Python :: 3.9
  Programming Language :: Python :: 3.10
  Programming Language :: Python :: Implementation :: CPython
  Topic :: Software Development :: Libraries :: Python Modules
  Topic :: Text Processing :: General
  Topic :: Text Processing :: Linguistic
  Topic :: Utilities
  Typing :: Typed

[options]
py_modules = lark_ambig_tools
python_requires = >= 3.6
install_requires = lark

[options.extras_require]
benchmark =
  pytest~=7.0
  pytest-benchmark~=3.0
